# mariadb-columnstore-server

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: install_layout.cmake  plugin.cmake
storage/columnstore/: CMakeLists.txt
